JumpScript/tests/baselines/reference/duplicateInterfaceMembers1.errors.txt
tests/cases/compiler/duplicateInterfaceMembers1.jump(2,4): error TS2300: Duplicate identifier 'x'.
tests/cases/compiler/duplicateInterfaceMembers1.jump(3,4): error TS2300: Duplicate identifier 'x'.


==== tests/cases/compiler/duplicateInterfaceMembers1.jump (2 errors) ====
    interface Bar {
       x: number;
       ~
!!! error TS2300: Duplicate identifier 'x'.
       x: number;
       ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    